        [CHANGE]
        * Add global_ccflags to SPVM::Builder::CC.
        * module_dirs, build_dir of SPVM::Builder::Exe is saved to SPVM::Builder object.
        * Add spvm command.
        * Improve module not found error message.
        * spvmcc bootstrap sources can detect the dependencies.
        * the executable file created by spvmcc is cached.

        [NON BACKWORD COMPATIBLE CHANGES]
        * spvmcc -I option doesn't add "/SPVM" after the directory names.
        
0.9125  2021-01-19
        [FIX BUGS]
        * Fix the bug that clang is not detected.
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove --ccflags, --lddlflags option of spvmcc
          because these config is done in SPVM::Builder::Config::Exe.
        * Remove extra_compiler_flags, extra_linker_flags from SPVM::Builder::Exe.
        * Rename module_name of SPVM::Builde::Exe to class_name.

0.9124  2021-01-19
        [CHANGES]
        * The path of native config file are decided from the native module name.
        * Simplify the cache logic to create precompile c source file.
        * Unicode module use own utf8proc library(spvm_utf8proc) instead of original utf8proc library.
        [FIX BUGS]
        * Fix the bug that spvmcc --force option is ignored in creating precompile c source.
        * Suppress Unicode module compile time warnings.
0.9123  2021-01-18
        [CHANGES]
        * SPMV standard modules and precompile source is compiled as gnu99 instead of c99
          because gnu99 is more widely assumed in the exsiting C libraries than c99.
        * new_cpp, new_cpp11 methods of SPVM::Builder::Config use the clang++ linker if the Perl itself was compiled by clang.
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove native/lib directory from the directories that libraries are searched for at runtime
          because generally libraries exists in the system, not the module sources.
        * Resoruce modules must be loaded as SPVM modules.
