@@ -1,0 +1,8 @@
+use strict;
+use warnings;
+
+use SPVM::Builder::Config::Exe;
+
+my $bconf = SPVM::Builder::Config::Exe->new_gnu99;
+
+$bconf;
